Use mutable objects for our bookmark tree given that JTree does not handle immutable objects ... (#225)